<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_bg"
    android:orientation="vertical"
    tools:context="com.onynet.a30home.activity.ManagerActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/data_package_error"
            style="@style/main_ll_menu_style">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/img_err" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:text="@string/package_error" />
        </LinearLayout>


        <View
            android:visibility="invisible"
            android:layout_width="@dimen/divider_width_size"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/data_ll_arrive_station"
            style="@style/main_ll_menu_style"
            android:visibility="invisible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/img_arrive_station" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:text="@string/arrive_station" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width_size"
        android:background="@color/divider"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/data_ll_reject"
            style="@style/main_ll_menu_style">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/img_reject" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:text="@string/reject" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/divider_width_size"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/data_ll_up_goods"
            style="@style/main_ll_menu_style">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/img_up_goods" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:text="@string/up_goods" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width_size"
        android:background="@color/divider"
        android:visibility="invisible" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/data_ll_inform_failure"
            style="@style/main_ll_menu_style">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/img_failure" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:text="@string/inform_failure" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/divider_width_size"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/data_ll_inform"
            style="@style/main_ll_menu_style">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/img_inform" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:text="@string/inform" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
