<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:delay_time="3000"
            app:image_scale_type="center_crop"
            app:indicator_drawable_selected="@drawable/main_banner_indicator_selected"
            app:indicator_height="10dp"
            app:indicator_margin="5dp"
            app:indicator_width="10dp" />

        <android.support.v7.widget.CardView style="@style/activity_put_card_view_style">

            <LinearLayout style="@style/activity_put_ll_style">

                <EditText
                    android:id="@+id/main_et_scan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:background="@null"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/scan"
                    android:padding="@dimen/spacing"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/main_iv_scan"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:src="@drawable/img_scan" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/main_btn_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing"
            android:background="@drawable/btn_solid_bg"
            android:foreground="?android:selectableItemBackground"
            android:text="@string/query"
            android:textColor="@color/icons"
            android:textSize="@dimen/btn_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_width_size"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/main_ll_operate"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/main_ll_batch_put"
                    style="@style/main_ll_menu_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/img_put" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing"
                        android:text="@string/package_put" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/divider_width_size"
                    android:layout_height="match_parent"
                    android:background="@color/divider" />

                <LinearLayout
                    android:id="@+id/main_ll_scan_put"
                    style="@style/main_ll_menu_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/img_out" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing"
                        android:text="@string/package_out" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/divider_width_size"
                    android:layout_height="match_parent"
                    android:background="@color/divider" />

                <LinearLayout
                    android:id="@+id/main_ll_express"
                    style="@style/main_ll_menu_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/img_move" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing"
                        android:text="@string/package_move" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_width_size"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/main_ll_data"
                    style="@style/main_ll_menu_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/img_manage" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing"
                        android:text="@string/package_manager" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/divider_width_size"
                    android:layout_height="match_parent"
                    android:background="@color/divider" />

                <LinearLayout
                    android:id="@+id/main_ll_msg"
                    style="@style/main_ll_menu_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/img_msg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing"
                        android:text="@string/sms" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/divider_width_size"
                    android:layout_height="match_parent"
                    android:background="@color/divider" />

                <LinearLayout
                    android:id="@+id/main_ll_set"
                    style="@style/main_ll_menu_style">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/img_set" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing"
                        android:text="@string/set" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_width_size"
            android:background="@color/divider" />
    </LinearLayout>
</ScrollView>