<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.onynet.a30home.activity.LoginActivity"
    >
    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/login_bg" />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99033454"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        android:background="#33000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_account" />

            <EditText
                android:id="@+id/login_et_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@null"
                android:hint="@string/input_email_number"
                android:inputType="text"
                android:padding="@dimen/spacing"
                android:textColorHint="#a5a1af"
                android:textColor="#a5a1af"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="#a5a1af" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@null"
                android:hint="@string/input_password"
                android:inputType="textWebPassword"
                android:padding="@dimen/spacing"
                android:textColorHint="#a5a1af"
                android:textColor="#a5a1af"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="#a5a1af" />

        <Button
            android:elevation="0dp"
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/btn_solid_bg"
            android:foreground="?android:selectableItemBackground"
            android:text="@string/login"
            android:textColor="@color/icons"
            android:textSize="@dimen/btn_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/login_cb_remember_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remember_password"
                android:textColor="#a5a1af" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
